<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_cancel_button">Cancel</string>
    <string name="accessibility_capture_video_start">Start Recording</string>
    <string name="accessibility_capture_video_stop">Stop Recording</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_mode_burst">5 second burst</string>
    <string name="accessibility_mode_last_filmstrip_item">Scroll to last item</string>
    <string name="accessibility_mode_next_filmstrip_item">Scroll to next item</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_switch_photo_mode">Open photo mode</string>
    <string name="accessibility_switch_video_mode">Open video mode</string>
    <string name="accessibility_unlock_to_camera">Unlock to Camera</string>
    <string name="advice_dirty_lens">Your lens may need cleaning</string>
    <string name="advice_dirty_lens_popup_text">"Lens smudges aren't always easy to see, and they can come from fingerprints, oil or dirt.

Clean your lens for better photo quality."</string>
    <string name="af_ae_lock">AF / AE Lock</string>
    <string name="all_photos">ALL PHOTOS</string>
    <string name="animation">Animation</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">Camera</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authentication_error">Authentication Error</string>
    <string name="auto">Auto</string>
    <string name="auto_flash_indicator_chip">Flash will fire</string>
    <string name="bottom_center">Bottom-center</string>
    <string name="bottom_left">Bottom-left</string>
    <string name="bottom_right">Bottom-right</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_last_filmstrip_item">Last</string>
    <string name="btn_next_filmstrip_item">Next</string>
    <string name="burst_date_content_description">Stack of %1$s burst photos taken on %2$s</string>
    <string name="burst_description">Tap the burst button to show the best photos only</string>
    <string name="burst_editor_best_frame_description">Best burst frame</string>
    <string name="burst_editor_close_speed_dial_description">Close creations menu</string>
    <string name="burst_editor_frame_description">Burst frame %1$s</string>
    <string name="burst_editor_navigate_up">Navigate up</string>
    <string name="burst_editor_open_speed_dial_description">Add creations</string>
    <string name="burst_editor_section_header_all">All Photos</string>
    <string name="burst_editor_section_header_best">Best Photos</string>
    <string name="burst_name">Smartburst</string>
    <string name="burst_process_creation">Saving</string>
    <string name="burst_process_done">All items processed</string>
    <string name="burst_process_start">Processing Burst</string>
    <string name="burst_process_x_of_y_items">Processed %1$s of %2$s photos</string>
    <string name="burst_text">Smartburst</string>
    <string name="camera_active_back">Back camera active</string>
    <string name="camera_active_front">Front camera active</string>
    <string name="camera_error_title">Camera error</string>
    <string name="camera_id_back_desc">Switch to front camera</string>
    <string name="camera_id_front_desc">Switch to back camera</string>
    <string name="camera_menu_settings_label">SETTINGS</string>
    <string name="camera_quality_high">hq</string>
    <string name="camera_quality_low">lq</string>
    <string name="camera_quality_max">max</string>
    <string name="cancel_button_description">Cancel</string>
    <string name="cancel_panorama">Discard Panorama</string>
    <string name="cancel_photo_sphere">Discard Photo Sphere</string>
    <string name="cannot_load_image">Cannot load the image!</string>
    <string name="capture_error">Capture error</string>
    <string name="capture_summary">Capture summary</string>
    <string name="center">Center</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="cheers_greeting_text">Cheers!</string>
    <string name="circus_desc">Circus mode options</string>
    <string name="circus_off_desc">Circus mode off</string>
    <string name="circus_on_desc">Circus mode on</string>
    <string name="cling_text_for_refocus_editor_button">To refocus, tap here</string>
    <string name="close">Close</string>
    <string name="collage">Collage</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="double_tap_zoom">Zoom</string>
    <string name="mode_video">Video</string>
    <string name="photo">Photo</string>
    <string name="pref_auto_generate_artifacts_toggle">Auto-generate creations</string>
    <string name="pref_burst_settings">Burst settings</string>
    <string name="pref_burst_title">Smartburst</string>
    <string name="pref_camera_dirty_lens_summary">Display warning when the lens may be too dirty to take high-quality pictures. Wiping off the lens may help.</string>
    <string name="pref_camera_dirty_lens_title">Show dirty lens warning</string>
    <string name="pref_camera_double_tap_action_title">Double-tap action</string>
    <string name="pref_camera_gestures_title">Gestures</string>
    <string name="pref_camera_picturesize_default">large</string>
    <string name="pref_camera_save_location_title">Save location</string>
    <string name="pref_camera_sounds_title">Camera sounds</string>
    <string name="pref_camera_volume_key_action_title">Volume key action</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_circus_control_summary">Show manual control for Circus mode.</string>
    <string name="pref_circus_control_title">Circus control</string>
    <string name="pref_developer_settings">Developer Settings</string>
    <string name="pref_hdr_plus_control_summary">Show manual control for HDR+. When this control is not shown, HDR+ is on.</string>
    <string name="pref_hdr_plus_control_title">HDR+ control</string>
    <string name="pref_smartburst_summary">Save only the best 8 images from a burst</string>
    <string name="pref_video_quality_large">large</string>
    <string name="pref_video_stabilization">Video stabilization</string>
    <string name="setting_back_camera_photo">Back camera photo resolution</string>
    <string name="setting_back_camera_video">Back camera video resolution</string>
    <string name="setting_front_camera_photo">Front camera photo resolution</string>
    <string name="setting_front_camera_video">Front camera video resolution</string>
    <string name="setting_general">General</string>
    <string name="setting_google_help_and_feedback">Help &amp; feedback</string>
    <string name="setting_grid_mode">Grid type</string>
    <string name="volume_key_shutter">Shutter</string>
    <string name="pref_parameters_camera_title">HDR+ parameters</string>
    <string name="pref_parameters_camera_summary">%s</string>
    <string name="pref_parameters_camera_default">0</string>
    <string name="pref_compress_jpeg_title">HDR+ image quality</string>
    <string name="pref_compress_jpeg_summary">Final Quality of jpeg is %s</string>
    <string name="pref_compress_jpeg_default">95</string>
    <string name="pref_refocus_resolution_title">Lens blur resolution</string>
    <string name="pref_refocus_resolution_summary">%s</string>
    <string name="pref_refocus_resolution_default">5</string>
    <string name="pref_hdrplus_settings_title">HDR+ settings</string>
    <string name="pref_misc_settings_title">Misc settings</string>
    <string name="exp_title">Correction of auto-exposure</string>
    <string name="exp_default">0</string>
    <string name="setting_zoompmodeb_title">Zoom in Portrait mode Back camera:</string>
    <string name="setting_zoompmodef_title">Zoom in Portrait mode Front camera:</string>
    <string name="pref_zoompmode_default">0</string>
</resources>