<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:orderingFromXml="true" android:key="prefscreen_top"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/photo" android:key="pref_category_resolution_camera">
        <ListPreference android:icon="@drawable/quantum_ic_aemode_grey600_24" android:entries="@array/exp_entries" android:layout="@layout/preference_with_margin" android:title="@string/exp_title" android:key="exp_key" android:summary="%s" android:defaultValue="@string/exp_default" android:entryValues="@array/exp_entryvalues" />
        <ListPreference android:icon="@drawable/ic_photo_camera_back_grey600_24dp" android:layout="@layout/preference_with_margin" android:title="@string/setting_back_camera_photo" android:key="pref_camera_picturesize_back_key" android:summary="%s" android:defaultValue="@string/pref_camera_picturesize_default" android:entryValues="@array/pref_camera_picturesize_entryvalues" />
        <ListPreference android:icon="@drawable/ic_photo_camera_front_grey600_24dp" android:layout="@layout/preference_with_margin" android:title="@string/setting_front_camera_photo" android:key="pref_camera_picturesize_front_key" android:summary="%s" android:defaultValue="@string/pref_camera_picturesize_default" android:entryValues="@array/pref_camera_picturesize_entryvalues" />
        <ListPreference android:icon="@drawable/quantum_ic_lensblur_grey600_24" android:entries="@array/pref_refocus_resolution_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_refocus_resolution_title" android:key="pref_refocus_resolution_key" android:summary="@string/pref_refocus_resolution_summary" android:defaultValue="@string/pref_refocus_resolution_default" android:entryValues="@array/pref_refocus_resolution_entryvalues" />
        <PreferenceScreen android:icon="@drawable/quantum_ic_burst_mode_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_burst_settings" android:key="pref_category_smartburst">
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_burst_title" android:key="pref_smartburst_classicburst" android:summary="@string/pref_smartburst_summary" android:defaultValue="true" />
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_auto_generate_artifacts_toggle" android:key="pref_auto_generate_artifacts" android:defaultValue="true" />
        </PreferenceScreen>
        <PreferenceScreen android:icon="@drawable/quantum_ic_expand_more_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_category_advanced" android:key="pref_category_advanced" android:order="255">
            <PreferenceCategory android:title="@string/pref_hdrplus_settings_title" android:key="pref_category_hdrplus">
                <ListPreference android:icon="@drawable/ic_hdrparams_grey600_24px" android:entries="@array/pref_parameters_camera_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_parameters_camera_title" android:key="pref_parameters_camera_key" android:summary="@string/pref_parameters_camera_summary" android:defaultValue="@string/pref_parameters_camera_default" android:entryValues="@array/pref_parameters_camera_entryvalues" />
                <ListPreference android:icon="@drawable/quantum_ic_JPG_grey600_24" android:entries="@array/pref_compress_jpeg_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_compress_jpeg_title" android:key="pref_compress_jpeg_key" android:summary="@string/pref_compress_jpeg_summary" android:defaultValue="@string/pref_compress_jpeg_default" android:entryValues="@array/pref_compress_jpeg_entryvalues" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_misc_settings_title" android:key="pref_category_misc">
                <ListPreference android:icon="@drawable/ic_camera_rear_black_24px" android:entries="@array/pref_zoompmode_entries" android:layout="@layout/preference_with_margin" android:title="@string/setting_zoompmodeb_title" android:key="pref_zoompmodeb_key" android:summary="%s" android:defaultValue="@string/pref_zoompmode_default" android:entryValues="@array/pref_zoompmode_entryvalues" />
                <ListPreference android:icon="@drawable/ic_camera_front_black_24px" android:entries="@array/pref_zoompmode_entries" android:layout="@layout/preference_with_margin" android:title="@string/setting_zoompmodef_title" android:key="pref_zoompmodef_key" android:summary="%s" android:defaultValue="@string/pref_zoompmode_default" android:entryValues="@array/pref_zoompmode_entryvalues" />
            </PreferenceCategory>
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_dirty_grey600_24dp" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_dirty_lens_title" android:key="pref_dirty_lens_detector_key" android:summary="@string/pref_camera_dirty_lens_summary" android:defaultValue="true" />
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_ic_HDR plus icon_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_hdr_plus_control_title" android:key="pref_camera_hdrplus_option_available_key" android:summary="@string/pref_hdr_plus_control_summary" android:defaultValue="true" />
            <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="@string/pref_circus_control_title" android:key="pref_camera_circus_option_available_key" android:summary="@string/pref_circus_control_summary" android:defaultValue="false" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/mode_video" android:key="pref_category_resolution_video">
        <ListPreference android:icon="@drawable/ic_video_camera_back_grey600_24dp" android:layout="@layout/preference_with_margin" android:title="@string/setting_back_camera_video" android:key="pref_video_quality_back_key" android:summary="%s" android:defaultValue="@string/pref_video_quality_large" android:entryValues="@array/pref_video_quality_entryvalues" />
        <ListPreference android:icon="@drawable/ic_video_camera_front_grey600_24dp" android:layout="@layout/preference_with_margin" android:title="@string/setting_front_camera_video" android:key="pref_video_quality_front_key" android:summary="%s" android:defaultValue="@string/pref_video_quality_large" android:entryValues="@array/pref_video_quality_entryvalues" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_featured_video_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_video_stabilization" android:key="pref_video_stabilization_key" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preference_category_first_layout" android:title="@string/setting_general" android:key="pref_category_general">
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_ic_place_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_save_location_title" android:key="pref_camera_recordlocation_key" android:order="0" android:defaultValue="false" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_ic_volume_up_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_sounds_title" android:key="pref_camera_sounds_key" android:order="1" android:defaultValue="true" />
        <PreferenceScreen android:icon="@drawable/quantum_ic_touch_app_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_gestures_title" android:key="pref_category_gestures" android:order="2">
            <ListPreference android:entries="@array/pref_volume_action_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_volume_key_action_title" android:key="pref_volume_key_action" android:summary="%s" android:defaultValue="@string/volume_key_shutter" android:entryValues="@array/pref_volume_action_entryvalues" />
            <ListPreference android:entries="@array/pref_double_tap_action_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_double_tap_action_title" android:key="pref_double_tap_key" android:summary="%s" android:defaultValue="@string/double_tap_zoom" android:entryValues="@array/pref_double_tap_entryvalues" />
        </PreferenceScreen>
        <ListPreference android:icon="@drawable/quantum_ic_grid_on_grey600_24" android:entries="@array/pref_grid_mode_entries" android:layout="@layout/preference_with_margin" android:title="@string/setting_grid_mode" android:key="pref_camera_grid_lines_mode" android:summary="%s" android:order="3" android:defaultValue="0" android:entryValues="@array/pref_grid_mode_entryvalues" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_google_help_and_feedback" android:key="pref_category_help_and_feedback">
        <Preference android:enabled="false" android:layout="@layout/hide" android:key="pref_launch_feedback" />
        <Preference android:enabled="false" android:layout="@layout/hide" android:key="pref_launch_help" />
        <PreferenceScreen android:icon="@drawable/quantum_ic_developer_mode_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_developer_settings" android:key="pref_category_developer" />
    </PreferenceCategory>
</PreferenceScreen>